versioned_docs/version-1.18.x/sdk/js/msg/token/index.mdx
---
title: Token Module
description: API reference for the Token Module of the ReductStore Client SDK for JavaScript.
---

<head>
  <link rel="canonical" href="https://www.reduct.store/docs/sdk/js/msg/token" />
</head>

# Token Module

## Classes

## Token

Defined in: [messages/Token.ts:62](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L62)

Information about an access token

### Constructors

#### Constructor

&gt; **new Token**(): `Token`

##### Returns

`Token`

### Properties

#### createdAt

&gt; `readonly` **createdAt**: `number` = `0`

Defined in: [messages/Token.ts:71](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L71)

Creation time of the token as unix timestamp in milliseconds

---

#### isProvisioned?

&gt; `readonly` `optional` **isProvisioned**: `boolean` = `false`

Defined in: [messages/Token.ts:76](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L76)

Is the token provisioned, and you can't remove it or change it

---

#### name

&gt; `readonly` **name**: `string` = `""`

Defined in: [messages/Token.ts:66](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L66)

Name of the token

---

#### permissions?

&gt; `readonly` `optional` **permissions**: [`TokenPermissions`](../api/classes/TokenPermissions)

Defined in: [messages/Token.ts:81](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L81)

Permissions of the token

### Methods

#### parse()

&gt; `static` **parse**(`data`): `Token`

Defined in: [messages/Token.ts:83](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L83)

##### Parameters

###### data

`OriginalTokenInfo`

##### Returns

`Token`

## TokenPermissions

Defined in: [messages/Token.ts:13](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L13)

Token Permissions

### Constructors

#### Constructor

&gt; **new TokenPermissions**(): `TokenPermissions`

##### Returns

`TokenPermissions`

### Properties

#### fullAccess

&gt; `readonly` **fullAccess**: `boolean` = `false`

Defined in: [messages/Token.ts:18](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L18)

Full access
The token allows to create, remove and update settings of buckets, manage tokens and read and write data.

---

#### read?

&gt; `readonly` `optional` **read**: `string`[] = `[]`

Defined in: [messages/Token.ts:24](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L24)

Read access
List of buckets allowed to read

---

#### write?

&gt; `readonly` `optional` **write**: `string`[] = `[]`

Defined in: [messages/Token.ts:30](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L30)

Write access
List of buckets allowed to write

### Methods

#### parse()

&gt; `static` **parse**(`data`): `TokenPermissions`

Defined in: [messages/Token.ts:32](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L32)

##### Parameters

###### data

`OriginalTokenPermission`

##### Returns

`TokenPermissions`

---

#### serialize()

&gt; `static` **serialize**(`data`): `OriginalTokenPermission`

Defined in: [messages/Token.ts:40](https://github.com/reductstore/reduct-js/blob/d0e71ee69ec952f8d0fc267548c514034a367605/src/messages/Token.ts#L40)

##### Parameters

###### data

`TokenPermissions`

##### Returns

`OriginalTokenPermission`
