versioned_docs/version-1.19.x/sdk/js/msg/token/index.mdx
---
title: Token Module
description: API reference for the Token Module of the ReductStore Client SDK for JavaScript.
---

<head>
  <link rel="canonical" href="https://www.reduct.store/docs/sdk/js/msg/token" />
</head>

# Token Module

## Classes

## Token

Defined in: [messages/Token.ts:114](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L114)

Information about an access token

### Constructors

#### Constructor

&gt; **new Token**(): `Token`

##### Returns

`Token`

### Properties

#### createdAt

&gt; `readonly` **createdAt**: `number` = `0`

Defined in: [messages/Token.ts:123](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L123)

Creation time of the token as unix timestamp in milliseconds

---

#### expiresAt?

&gt; `readonly` `optional` **expiresAt**: `number`

Defined in: [messages/Token.ts:143](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L143)

Expiration time as unix timestamp in milliseconds

---

#### ipAllowlist?

&gt; `readonly` `optional` **ipAllowlist**: `string`[]

Defined in: [messages/Token.ts:148](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L148)

List of IP addresses and CIDR ranges allowed to use the token

---

#### isExpired?

&gt; `readonly` `optional` **isExpired**: `boolean`

Defined in: [messages/Token.ts:138](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L138)

True if the token is expired

---

#### isProvisioned?

&gt; `readonly` `optional` **isProvisioned**: `boolean` = `false`

Defined in: [messages/Token.ts:153](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L153)

Is the token provisioned, and you can't remove it or change it

---

#### lastAccess?

&gt; `readonly` `optional` **lastAccess**: `number`

Defined in: [messages/Token.ts:128](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L128)

Last access time of the token as unix timestamp in milliseconds

---

#### name

&gt; `readonly` **name**: `string` = `""`

Defined in: [messages/Token.ts:118](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L118)

Name of the token

---

#### permissions?

&gt; `readonly` `optional` **permissions**: [`TokenPermissions`](../api/classes/TokenPermissions)

Defined in: [messages/Token.ts:158](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L158)

Permissions of the token

---

#### ttl?

&gt; `readonly` `optional` **ttl**: `number`

Defined in: [messages/Token.ts:133](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L133)

Time to live in seconds

### Methods

#### parse()

&gt; `static` **parse**(`data`): `Token`

Defined in: [messages/Token.ts:160](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L160)

##### Parameters

###### data

`OriginalTokenInfo`

##### Returns

`Token`

## TokenCreateRequest

Defined in: [messages/Token.ts:23](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L23)

Token create request

### Constructors

#### Constructor

&gt; **new TokenCreateRequest**(): `TokenCreateRequest`

##### Returns

`TokenCreateRequest`

### Properties

#### expiresAt?

&gt; `readonly` `optional` **expiresAt**: `number`

Defined in: [messages/Token.ts:32](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L32)

Expiration time as unix timestamp in milliseconds

---

#### ipAllowlist?

&gt; `readonly` `optional` **ipAllowlist**: `string`[]

Defined in: [messages/Token.ts:42](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L42)

List of IP addresses and CIDR ranges allowed to use the token

---

#### permissions

&gt; `readonly` **permissions**: [`TokenPermissions`](../api/classes/TokenPermissions)

Defined in: [messages/Token.ts:27](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L27)

Permissions for the token

---

#### ttl?

&gt; `readonly` `optional` **ttl**: `number`

Defined in: [messages/Token.ts:37](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L37)

Time to live in seconds

### Methods

#### serialize()

&gt; `static` **serialize**(`data`): `OriginalTokenCreateRequest`

Defined in: [messages/Token.ts:44](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L44)

##### Parameters

###### data

`TokenCreateRequest`

##### Returns

`OriginalTokenCreateRequest`

## TokenPermissions

Defined in: [messages/Token.ts:60](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L60)

Token Permissions

### Constructors

#### Constructor

&gt; **new TokenPermissions**(): `TokenPermissions`

##### Returns

`TokenPermissions`

### Properties

#### fullAccess

&gt; `readonly` **fullAccess**: `boolean` = `false`

Defined in: [messages/Token.ts:65](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L65)

Full access
The token allows to create, remove and update settings of buckets, manage tokens and read and write data.

---

#### read?

&gt; `readonly` `optional` **read**: `string`[] = `[]`

Defined in: [messages/Token.ts:71](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L71)

Read access
List of buckets allowed to read

---

#### write?

&gt; `readonly` `optional` **write**: `string`[] = `[]`

Defined in: [messages/Token.ts:77](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L77)

Write access
List of buckets allowed to write

### Methods

#### parse()

&gt; `static` **parse**(`data`): `TokenPermissions`

Defined in: [messages/Token.ts:79](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L79)

##### Parameters

###### data

`OriginalTokenPermission`

##### Returns

`TokenPermissions`

---

#### serialize()

&gt; `static` **serialize**(`data`): `OriginalTokenPermission`

Defined in: [messages/Token.ts:87](https://github.com/reductstore/reduct-js/blob/6af4865c74b7835a84d71904de4c1e108e52ea01/src/messages/Token.ts#L87)

##### Parameters

###### data

`TokenPermissions`

##### Returns

`OriginalTokenPermission`
